# WasalnyApp

./: .gitignore  CMakeLists.txt  fileHandling.cpp  main.cpp  test.txt
Graph structure/: Edge.cpp  logic.cpp
dataLayer/: globaData.csv
dataLayer/UsersInfo/Admin/savedGraphs/: Berland.csv  graphName.csv  test.csv
graphStructure/: Bellman.cpp  Bfs.cpp  Dijkstra.cpp  Dijkstra.h  Edge.cpp  Edge.h  Graph.cpp  Graph.h  Node.cpp  Node.h  Path.cpp  Path.h  logic.cpp
